--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -64,3 +64,100 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+body {
+	text-align: center;
+	margin: 0px 350px 0px 350px;
+}
+
+.navigation {
+	margin: 0 auto;
+	text-align: center;
+}
+
+.navigation a {
+	text-decoration: none;
+	color: #b9bdc4;
+	padding: 10px 15px 20px 15px;
+}
+
+.logo {
+	padding: 30px 0px 0px 15px;
+}
+
+h1 {
+	font-size: 80px;
+}
+
+.head {
+	text-align: center;
+	display: inline-block;
+}
+
+section {
+	padding: 65px 30px 50px 0px;
+}
+
+.head div {
+	width: 49.5%;
+	display: inline-block;
+}
+
+.head div button {
+	text-decoration: none;
+	background-color: white;
+	font-size: 16px;
+	padding:;
+}
+
+.head img {
+	width: 49.5%;
+	display: inline-block;
+	padding: 0px 0px 5px 40px;
+}
+
+hr {
+	border: 1px solid black;
+}
+
+.features {
+	text-align: left;
+	width: 49.5%;
+	display: inline-block;
+}
+
+.about {
+	text-align: left;
+	width: 49.5%;
+	display: inline-block;
+}
+
+.services {
+	text-align: left;
+	display: inline-block;
+	width: 32.5%;
+}
+
+.product {
+	text-align: left;
+	display: inline-block;
+	width: 32.5%;
+}
+
+.vision {
+	text-align: left;
+	display: inline-block;
+	width: 32.5%;
+}
+
+address {
+	text-align: left;
+}
+
+address h3{
+	padding: 45px 0px 0px 0px;
+}
+
+footer {
+	padding: 45px;
+}
